# slowcontrol

./: .gitmodules  CMakeLists.txt  Doxyfile.in  README.md  Slowcontrol.pc.in  astyle.style  database.sql  dump_dbstructure.bash
src/: CMakeLists.txt
src/avrcode/: CMakeLists.txt  avrtest.cpp  iopin.h  rfio433MHz.cpp  usart.h
src/avrcode/rfio433MHz/: CMakeLists.txt  rfio433MHz.cpp
src/base/: .gitignore  CMakeLists.txt  communications.cpp  configValue.cpp  gpio.cpp  measurement.cpp  pgsqlWrapper.cpp  slowcontrol.cpp  slowcontrolDaemon.cpp  states.cpp  trigger.cpp
src/base/include/: communications.h  configValue.h  filevalue.h  gpio.h  measurement.h  parasitic_temperature.h  pgsqlWrapper.h  semaphore.h  slowcontrol.h  slowcontrolDaemon.h  states.h  trigger.h
src/daemons/: CMakeLists.txt  bluetoothPresenced.cpp  bmp280d.cpp  gpiod.cpp  hih6131d.cpp  hih6313d.cpp  korad_d.cpp  maassend.cpp  onewired.cpp  raspicamd.cpp  rfio433d.cpp  rgbwPCA9533d.cpp  rgbywd.cpp  rpiBrightnessd.cpp  ruleProcessord.cpp  testdaemon.cpp  vc820d.cpp
src/systemd/: 50-korad-powersupply-udev.rules  50-korad-powersupply-udev.rules.in  50-rfio-udev.rules.in  50-vc820-udev.rules.in  CMakeLists.txt  maassend.service  slowcontrol.service.in
src/tools/: CMakeLists.txt  displayStart  displayStop  postRequest.cpp  purge_videos.in  requestValueSetting.cpp  restart_daemons.in
src/website/: add_comment.php  alarms.php  classify_video.php  compound.php  compounds.php  configure_value.php  daemons.php  dressed_graph.php  external.php  graph.php  index.php  moon.php  paveview.php  rulegraph.php  rulenode.php  rules.php  setLight.php  set_light.php  set_value.php  style.css  valueconfig.php  valueconfig_history.php  valuelist.php  variables.php  videos.php
