add_executable(testdaemon testdaemon.cpp)
target_link_libraries(testdaemon slowcontrol_static ${OptionParser_LIBRARIES})

#set(daemons maassend onewired bluetoothPresenced hih6131d gpiod PARENT_SCOPE)
set(daemons maassend onewired bluetoothPresenced hih6131d gpiod raspicamd)
set(daemons ${daemons} PARENT_SCOPE)
foreach (DAEMON ${daemons})
	add_executable(${DAEMON} ${DAEMON}.cpp)
	target_link_libraries(${DAEMON} slowcontrol_static ${OptionParser_LIBRARIES})
install(TARGETS ${DAEMON} DESTINATION bin)
endforeach(DAEMON)
