foreach (DAEMON ${daemons})
       if (${DAEMON} STREQUAL "korad_d" OR ${DAEMON} STREQUAL "vc820d")
          SET(WANTED_BY "")
          SET(SERVICE_EXTRALINES "StopWhenUnneeded=true")
       else (${DAEMON} STREQUAL "korad_d")
          SET(WANTED_BY "multi-user.target")
          UNSET(SERVICE_EXTRALINES)
       endif (${DAEMON} STREQUAL "korad_d" OR ${DAEMON} STREQUAL "vc820d")
       configure_file(slowcontrol.service.in ${DAEMON}.service)
       install(FILES ${CMAKE_CURRENT_BINARY_DIR}/${DAEMON}.service DESTINATION /etc/systemd/user)
endforeach(DAEMON)

configure_file(50-korad-powersupply-udev.rules.in 50-korad-powersupply-udev.rules)
install(FILES ${CMAKE_CURRENT_BINARY_DIR}/50-korad-powersupply-udev.rules DESTINATION /etc/udev/rules.d)

configure_file(50-vc820-udev.rules.in 50-vc820-udev.rules)
install(FILES ${CMAKE_CURRENT_BINARY_DIR}/50-vc820-udev.rules DESTINATION /etc/udev/rules.d)
